# EchoClip

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build.yml
src/: audio.hpp  desktop.ini  ffmpeg_encoder.hpp  main.cpp  menu_hook.cpp  miniaudio.h  ui.cpp  ui.hpp  video_capture.hpp  watermark.cpp  watermark.hpp
src/common/: common.cpp  common.hpp
src/mac/: mac.cpp  mac.hpp
src/win/: win.cpp  win.hpp
